--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.4",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,7 +24,8 @@
     "react-router-dom": "^7.5.3",
     "sweetalert2": "^11.19.1",
     "sweetalert2-react-content": "^5.1.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
